--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodes",
   "description": "prime dom library",
-  "version": "0.0.2-alpha1",
+  "version": "0.0.1-alpha",
   "license": "MIT (http://mootools.net/license.txt)",
   "main": "./main.js",
   "keywords": [
