--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mocha": "1.0",
     "expect.js": "0.1",
     "wrapup": "0.9",
-    "github-flavored-markdown": "1.0",
+    "robotskirt": "1",
     "highlight.js": "7"
   },
   "optionalDependencies": {
