Remove lib/main.js, the main module is now lib/elements
Now each module should be loaded explicitly, instead of some are loaded by
default by the main.js, and other are not.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "prime dom library",
   "version": "0.0.7-alpha",
   "license": "MIT (http://mootools.net/license.txt)",
-  "main": "./lib/main.js",
+  "main": "./lib/elements.js",
   "keywords": [
     "dom",
     "prime",
