--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "elements",
   "description": "prime dom library",
-  "version": "0.0.9",
+  "version": "0.1.0-dev",
   "license": "MIT (http://mootools.net/license.txt)",
-  "main": "./lib/elements.js",
+  "main": "./index.js",
   "keywords": [
     "dom",
     "prime",
@@ -19,8 +19,8 @@
     "url": "git://github.com/mootools/elements.git"
   },
   "dependencies": {
-    "prime": "0.0.6",
-    "slick": "1.9.2"
+    "prime": "0.1",
+    "slick": "1.10"
   },
   "devDependencies": {
     "mocha": "1.4",
