--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elements",
   "description": "prime dom library",
-  "version": "0.1.0-dev",
+  "version": "0.1.0",
   "license": "MIT (http://mootools.net/license.txt)",
   "main": "./index.js",
   "keywords": [
