--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "url": "git://github.com/mootools/elements.git"
   },
   "dependencies": {
-    "prime": "0.3",
-    "slick": "1.10",
-    "mout": "~0.7.1"
+    "prime": "0.4",
+    "mout": "0.9",
+    "slick": ">=1.10.4 <2.0.0"
   },
   "devDependencies": {
     "mocha": "1.12",
